--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -13,37 +13,62 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/editReminderTime"
-            android:text="@string/time" />
-
-        <EditText
-            android:id="@+id/editReminderTime"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="time"
-            android:text="@string/time" />
+            android:layout_height="match_parent"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/editAmount"
-            android:singleLine="true"
-            android:text="@string/dosage" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/editAmount"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:ems="10"
-            android:hint="@string/dosage"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:text="@string/dosage" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/editReminderTime"
+                    android:text="@string/time" />
+
+                <EditText
+                    android:id="@+id/editReminderTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:ems="10"
+                    android:importantForAutofill="no"
+                    android:inputType="time"
+                    android:text="@string/time" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/editAmount"
+                    android:singleLine="true"
+                    android:text="@string/dosage" />
+
+                <EditText
+                    android:id="@+id/editAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:ems="10"
+                    android:hint="@string/dosage"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:text="@string/dosage" />
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,6 +96,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/days" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/instructions_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:labelFor="@+id/editInstructions"
+                android:maxLines="1"
+                android:text="@string/instructions" />
+
+            <EditText
+                android:id="@+id/editInstructions"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp"
+                android:layout_weight="1"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:text="@string/instructions" />
+
+            <Button
+                android:id="@+id/instructionSuggestions"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:maxLines="1"
+                android:text="@string/three_dots" />
         </LinearLayout>
 
     </LinearLayout>
