Changed instruction templates button

--- a/app/src/main/res/layout/activity_edit_medicine.xml
+++ b/app/src/main/res/layout/activity_edit_medicine.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="@string/color" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/selectColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
