--- a/app/src/main/res/layout/activity_edit_medicine.xml
+++ b/app/src/main/res/layout/activity_edit_medicine.xml
@@ -28,17 +28,29 @@
             android:inputType="text"
             android:singleLine="true" />
 
-        <com.google.android.material.materialswitch.MaterialSwitch
-            android:id="@+id/enableColor"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/color" />
+            android:orientation="horizontal">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/selectColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/select_color" />
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/enableColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/color" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/selectColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/select_color" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/reminderList"
