--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -97,18 +97,18 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/instructions_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:labelFor="@+id/editInstructions"
+            android:maxLines="1"
+            android:text="@string/instructions_label" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/instructions_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:labelFor="@+id/editInstructions"
-                android:maxLines="1"
-                android:text="@string/instructions" />
 
             <EditText
                 android:id="@+id/editInstructions"
