--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
         <item>@string/swipe_left</item>
         <item>@string/long_press</item>
     </string-array>
-    <string-array name="delete_entries_values">
+    <string-array name="values_0_and_1">
         <item>0</item>
         <item>1</item>
     </string-array>
@@ -35,5 +35,23 @@
         <item>@string/after_meal</item>
         <item>@string/time_before_meal</item>
         <item>@string/time_after</item>
+    </string-array>
+    <string-array name="dismiss_notification_action">
+        <item>@string/skip_reminder</item>
+        <item>@string/snooze</item>
+    </string-array>
+    <string-array name="snooze_duration">
+        <item>@string/minutes_5</item>
+        <item>@string/minutes_10</item>
+        <item>@string/minutes_15</item>
+        <item>@string/minutes_30</item>
+        <item>@string/minutes_60</item>
+    </string-array>
+    <string-array name="snooze_duration_values">
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
     </string-array>
 </resources>
