--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -34,6 +34,11 @@
         android:summary="@string/exact_reminders_summary"
         android:title="@string/exact_reminders"
         app:key="exact_reminders" />
+    <Preference
+        app:fragment="com.futsch1.medtimer.WeekendModePreferencesFragment"
+        app:key="weekend_mode"
+        app:summary="@string/weekend_mode_summary"
+        app:title="@string/weekend_mode" />
     <ListPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
