--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:text="@string/log_manual_dose"
+        android:text="@string/log_additional_dose"
         app:icon="@drawable/capsule" />
 
     <com.google.android.material.card.MaterialCardView
