--- a/app/src/main/res/layout/activity_advanced_reminder_settings.xml
+++ b/app/src/main/res/layout/activity_advanced_reminder_settings.xml
@@ -74,23 +74,26 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/remind_on" />
-
-    <TextView
-        android:id="@+id/remindOnDays"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/editbox_background_normal"
-        android:drawablePadding="16dp"
-        android:hint="@string/every_day"
-        android:padding="12dp"
-        android:text="@string/every_day"
-        android:textColor="?android:attr/colorForeground"
-        app:drawableEndCompat="@drawable/pencil_square" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/remind_on" />
+
+        <Button
+            android:id="@+id/remindOnDays"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:hint="@string/every_day"
+            android:padding="0dp"
+            android:text="@string/every_day" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/instructions_text"
