--- a/app/src/main/res/layout/activity_edit_medicine.xml
+++ b/app/src/main/res/layout/activity_edit_medicine.xml
@@ -14,19 +14,19 @@
         android:orientation="vertical"
         android:padding="5dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/editMedicineName"
-            android:text="@string/medicine_name" />
-
-        <EditText
-            android:id="@+id/editMedicineName"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:singleLine="true" />
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/medicine_name">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editMedicineName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
