--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,17 +8,17 @@
     <fragment
         android:id="@+id/medicinesFragment"
         android:name="com.futsch1.medtimer.medicine.MedicinesFragment"
-        android:label="fragment_medicines"
+        android:label="@string/tab_medicine"
         tools:layout="@layout/fragment_medicines" />
     <fragment
         android:id="@+id/overviewFragment"
         android:name="com.futsch1.medtimer.overview.OverviewFragment"
-        android:label="fragment_overview"
+        android:label="@string/tab_overview"
         tools:layout="@layout/fragment_overview" />
     <fragment
         android:id="@+id/preferencesFragment"
         android:name="com.futsch1.medtimer.PreferencesFragment"
-        android:label="PreferencesFragment">
+        android:label="@string/tab_settings">
         <action
             android:id="@+id/action_preferencesFragment_to_weekendModePreferencesFragment"
             app:destination="@id/weekendModePreferencesFragment" />
@@ -26,11 +26,11 @@
     <fragment
         android:id="@+id/weekendModePreferencesFragment"
         android:name="com.futsch1.medtimer.WeekendModePreferencesFragment"
-        android:label="WeekendModePreferencesFragment" />
+        android:label="@string/weekend_mode" />
     <fragment
         android:id="@+id/editMedicine"
         android:name="com.futsch1.medtimer.medicine.EditMedicine"
-        android:label="activity_edit_medicine"
+        android:label="@string/tab_medicine"
         tools:layout="@layout/fragment_edit_medicine">
         <argument
             android:name="medicineId"
@@ -57,7 +57,7 @@
     <fragment
         android:id="@+id/advancedReminderSettings"
         android:name="com.futsch1.medtimer.medicine.AdvancedReminderSettings"
-        android:label="fragment_advanced_reminder_settings"
+        android:label="@string/advanced_settings"
         tools:layout="@layout/fragment_advanced_reminder_settings">
         <argument
             android:name="reminderId"
@@ -69,7 +69,7 @@
     <fragment
         android:id="@+id/fragmentMain"
         android:name="com.futsch1.medtimer.FragmentMain"
-        android:label="FragmentMain">
+        android:label="@string/app_name">
         <action
             android:id="@+id/action_fragmentMain_to_editMedicine"
             app:destination="@id/editMedicine" />
