--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/fragmentMain">
+    app:startDestination="@id/mainFragment">
 
     <fragment
         android:id="@+id/medicinesFragment"
@@ -28,8 +28,8 @@
         android:name="com.futsch1.medtimer.WeekendModePreferencesFragment"
         android:label="@string/weekend_mode" />
     <fragment
-        android:id="@+id/editMedicine"
-        android:name="com.futsch1.medtimer.medicine.EditMedicine"
+        android:id="@+id/editMedicineFragment"
+        android:name="com.futsch1.medtimer.medicine.EditMedicineFragment"
         android:label="@string/tab_medicine"
         tools:layout="@layout/fragment_edit_medicine">
         <argument
@@ -46,7 +46,7 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_editMedicine_to_advancedReminderSettings"
-            app:destination="@id/advancedReminderSettings" />
+            app:destination="@id/advancedReminderSettingsFragment" />
     </fragment>
     <argument
         android:name="reminderId"
@@ -55,8 +55,8 @@
         android:name="medicineName"
         app:argType="string" />
     <fragment
-        android:id="@+id/advancedReminderSettings"
-        android:name="com.futsch1.medtimer.medicine.AdvancedReminderSettings"
+        android:id="@+id/advancedReminderSettingsFragment"
+        android:name="com.futsch1.medtimer.medicine.AdvancedReminderSettingsFragment"
         android:label="@string/advanced_settings"
         tools:layout="@layout/fragment_advanced_reminder_settings">
         <argument
@@ -67,12 +67,12 @@
             app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/fragmentMain"
-        android:name="com.futsch1.medtimer.FragmentMain"
+        android:id="@+id/mainFragment"
+        android:name="com.futsch1.medtimer.MainFragment"
         android:label="@string/app_name">
         <action
             android:id="@+id/action_fragmentMain_to_editMedicine"
-            app:destination="@id/editMedicine" />
+            app:destination="@id/editMedicineFragment" />
     </fragment>
     <action
         android:id="@+id/action_global_preferencesFragment"
